--- a/common.css
+++ b/common.css
@@ -7,22 +7,23 @@
   src: url("./fonts/timeburnernormal.ttf");
 }
 body{
-  margin-top: 2vh;
-  margin-left: 33vh;
-  margin-right: 33vh;
+  margin-top: 3vh;
 }
 #topbar{
   height: 10vh;
-  display: inline-block;
+  display: flex;
+  justify-content: flex-start;
 }
 #title{
   font-family: "Clemente", Arial;
-  font-size: 4.5vh;
+  font-size: 5vh;
   text-decoration: none;
   color: black;
 }
 #nav{
   padding-bottom: 5vh;
+  display: flex;
+  justify-content: flex-start;
 }
 #spacer{
 	padding: .5vh;
@@ -33,13 +34,34 @@ body{
   text-decoration: none;
   color: black;
   font-size: 1.6vh;
+  margin-top: .8vh;
 }
 .icon{
-	width: 3.5vh;
-	height: 3.5vh;
+  width: 2.6vh;
+  height: 2.6vh;
+}
+#em{
+  width: 3.2vh;
 }
 #footer{
   padding-top: 10vh;
   bottom: 0;
   position: relative;
+  display: flex;
+  justify-content: flex-start;
+}
+@media (max-width: 480px){
+  #topbar, #nav, #footer{
+    margin-left: 3.5vh;
+  }
+}
+@media (min-width: 768px){
+  #topbar, #nav, #footer{
+    margin-left: 7vh;
+  }
+}
+@media (min-width: 1200px){
+  #topbar, #nav, #footer{
+    margin-left: 25vh;
+  }
 }
