--- a/github.css
+++ b/github.css
@@ -5,16 +5,16 @@ h3{
 }
 .deck{
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  padding-bottom: 3vh;
 }
 .card{
   border-style: solid;
   border-width: 1px;
   border-color: #BBBBBB;
-  width: 60vh;
-  padding-bottom: 2vh;
+  width: 48%;
+  color: black;
+  text-decoration: none;
 }
 .container{
   margin-left: 2vh;
@@ -23,7 +23,10 @@ h3{
 .description{
   margin-right: 2vh;
   padding-bottom: 1vh;
-  height: 3vh;
+  height: 10vh;
+}
+p{
+  font-size: .9em;
 }
 button{
   float: right;
@@ -38,13 +41,18 @@ button:hover{
   background-color: #444444;
   transition: all .1s ease-in-out;
 }
-@media (min-width: 768px){
-  h3{
-    margin-left: 7vh;
+@media (max-width: 480px){
+  .card{
+	  width: 100%;
   }
 }
-@media (min-width: 1200px){
+@media (min-width: 481px){
   h3{
-    margin-left: 25vh;
+    margin-left: 10%;
+  }
+  .deck{
+	  width: 80%;
+	  margin-left: 10%;
+	  padding-bottom: 2vh;
   }
 }
