--- a/media.css
+++ b/media.css
@@ -6,6 +6,7 @@
 #row1, #row2, #row3 {
   -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
   animation-name: example;
+  object-fit: cover;
 }
 #row1{
   -webkit-animation-duration: .5s; /* Safari 4.0 - 8.0 */
@@ -40,24 +41,30 @@
 @media (max-width: 480px){
   #row1, #row2, #row3 {
     width: 49%;
-    height: auto;
+    height: 23vh;
   }
 }
-@media (min-width: 481px) and (max-width: 1200px){
+@media (min-width: 481px) and (max-width: 1023px){
+  h3{
+    margin-left: 10%;
+  }
   #container{
     width: 80%;
   }
   #row1, #row2, #row3 {
-    width: 32.8%;
-    height: auto;
+    width: 49%;
+    height: 38vh;
   }
 }
-@media (min-width: 1201px){
+@media (min-width: 1024px){
+  h3{
+	margin-left: 10%;
+  }
   #container{
-    width: 70%;
+    width: 80%;
   }
   #row1, #row2, #row3 {
-    width: 24.7%;
-    height: auto;
+    width: 24%;
+    height: 33vh;
   }
 }
