--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,10 @@
 p{
-  padding-bottom: 3vh;
+  padding-bottom: 1%;
+  font-size: .9em;
 }
 @media (min-width: 481px){
-  p{
+  #main{  
+    display: inline-block;
     margin-left: 10%;
     margin-right: 10%;
   }
