--- a/css/github.css
+++ b/css/github.css
@@ -1,4 +1,5 @@
 h3{
+  padding-top: 10vh;
   padding-bottom: 3vh;
   display: flex;
   justify-content: flex-start;
@@ -7,6 +8,7 @@ h3{
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  padding-top: 7vh;
 }
 .card{
   border-style: solid;
@@ -19,6 +21,9 @@ h3{
 .container{
   margin-left: 2vh;
   padding-bottom: 3vh;
+}
+.tags{
+	margin-left: 2vh;
 }
 .description{
   margin-right: 2vh;
