--- a/css/common.css
+++ b/css/common.css
@@ -2,23 +2,26 @@
   font-family: "Clemente";
   src: url("../resources/fonts/Clemente.ttf");
 }
-@font-face{
-  font-family: "TimeBurner";
-  src: url("../resources/fonts/timeburnernormal.ttf");
-}
 body{
   margin-top: 3vh;
   background-color: #FCFCFC;
 }
 h1, h2{
-	  font-family: Candara;
+  font-family: Candara;
   font-weight: 100;
+}
+#landing{
+  margin-left: 10%;
+  margin-top: 20vh;
+  padding-bottom: 13vh;
 }
 .intro{
   padding-top: 4vh;
-  width: 55%;
+  width: 80%;
 }
 #resume{
+  font-family: Candara;
+  font-weight: 100;
   color: black;
   font-size: 1.4em;
 }
@@ -30,7 +33,7 @@ h1, h2{
 	margin-top: 10%;
 }
 #topbar{
-	overflow: hidden;
+	display: block;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -40,7 +43,6 @@ h1, h2{
   margin-top: 1%;
   margin-left: 10%;
   float: left;
-  display: block;
   font-family: "Clemente", Arial;
   font-size: 2.9em;
   text-decoration: none;
@@ -48,24 +50,25 @@ h1, h2{
 }
 
 .icon{
-  width: 1.2em;
-  height: 1.2em;
+  width: 1.8m;
+  height: 1.8em;
   padding-right: 2px;
 }
 #email{
-  width: 1.6em;
+  width: 2.4em;
 }
-#footer{
-  padding-top: 5vh;
-  bottom: 0;
-  position: relative;
-  display: flex;
-  justify-content: flex-start;
+#social-media{
+  float: left;
+  margin-top: 1vh;
+  margin-left: 10%;
+  padding-bottom: 1vh;
 }
-
 @media (min-width: 481px){
-#footer{
-    margin-left: 10%;
+#social-media{
+	display: flex;
+	margin-top: 4vh;
+	float: right;
+	margin-right: 10%;
   }
 }
 .row{
@@ -78,7 +81,7 @@ h1, h2{
 	padding-bottom: 10vh;
 }
 .left-col{
-	width: 25%;
+	width: 20%;
 	margin-left: 10%;
 }
 .right-col{
@@ -100,4 +103,47 @@ h1, h2{
 	color: black;
 	bottom: 0;
 	position: relative;
+}
+	
+@media (min-width: 481px){
+  #landing{
+    margin-left: 10%;
+    margin-top: 40vh;
+    padding-bottom: 25vh;
+  }
+  .intro{
+    padding-top: 3vh;
+    width: 75%;
+  }
+}
+@media (min-width: 1200px){
+	.intro{
+		width: 60%;
+	}
+}
+@media (min-width: 2560px){
+  #title{
+	font-size: 5em;
+  }
+  .icon{
+	  width: 3em;
+	  height: 3em;
+  }
+  #email{
+	  width: 3.6em;
+  }
+  h1{
+	  font-size: 3.5em;
+  }
+  h2{
+	  font-size: 3em;
+  }
+  #resume{
+	  font-size: 3em;
+  }
+  #landing{
+    margin-left: 10%;
+    margin-top: 40vh;
+    padding-bottom: 25vh;
+  }
 }
