--- a/css/github.css
+++ b/css/github.css
@@ -14,24 +14,27 @@ h3{
   border-style: solid;
   border-width: 1px;
   border-color: #BBBBBB;
-  width: 48%;
+  width: 44%;
   color: black;
   text-decoration: none;
 }
 .container{
   margin-left: 2vh;
   padding-bottom: 3vh;
+  height: 6em;
+
+}
+.description{
+  margin-right: 2vh;
+}
+p{
+  font-size: .9em;
 }
 .tags{
 	margin-left: 2vh;
 }
-.description{
-  margin-right: 2vh;
-  padding-bottom: 1vh;
-  height: auto;
-}
-p{
-  font-size: .9em;
+.ext-link{
+	color: black;
 }
 @media (max-width: 480px){
   .card{
@@ -47,4 +50,12 @@ p{
 	  margin-left: 10%;
 	  padding-bottom: 2vh;
   }
+}
+@media (min-width: 2560px){
+	h4{
+		font-size: 1.7em;
+	}
+	p{
+		font-size: 1.4em;
+	}
 }
