--- a/css/github.css
+++ b/css/github.css
@@ -6,6 +6,7 @@ h3{
 }
 .deck{
   display: flex;
+  font-family: Candara;
   justify-content: space-evenly;
   flex-wrap: wrap;
   padding-top: 7vh;
@@ -28,7 +29,8 @@ h3{
   margin-right: 2vh;
 }
 p{
-  font-size: .9em;
+  font-family: Candara;
+  font-size: .95em;
 }
 .tags{
 	margin-left: 2vh;
