--- a/css/github.css
+++ b/css/github.css
@@ -6,7 +6,7 @@ h3{
 }
 .deck{
   display: flex;
-  font-family: Candara;
+  font-family: Candara, Helvetica, Arial;
   justify-content: space-evenly;
   flex-wrap: wrap;
   padding-top: 7vh;
@@ -29,7 +29,7 @@ h3{
   margin-right: 2vh;
 }
 p{
-  font-family: Candara;
+  font-family: Candara, Helvetica, Arial;
   font-size: .95em;
 }
 .tags{
