--- a/css/common.css
+++ b/css/common.css
@@ -26,7 +26,7 @@ h1, h2{
   font-size: 1.4em;
 }
 .cover{
-	width: 100%;
+	width: 40%;
 	height: auto;
 }
 #main{
@@ -48,7 +48,6 @@ h1, h2{
   text-decoration: none;
   color: black;
 }
-
 .icon{
   width: 1.8m;
   height: 1.8em;
@@ -62,14 +61,6 @@ h1, h2{
   margin-top: 1vh;
   margin-left: 10%;
   padding-bottom: 1vh;
-}
-@media (min-width: 481px){
-#social-media{
-	display: flex;
-	margin-top: 4vh;
-	float: right;
-	margin-right: 10%;
-  }
 }
 .row{
 	display: flex;
@@ -104,7 +95,6 @@ h1, h2{
 	bottom: 0;
 	position: relative;
 }
-	
 @media (min-width: 481px){
   #landing{
     margin-left: 10%;
@@ -115,11 +105,36 @@ h1, h2{
     padding-top: 3vh;
     width: 75%;
   }
+  #social-media{
+	display: flex;
+	margin-top: 4vh;
+	float: right;
+	margin-right: 10%;
+  }
+}
+@media (max-width: 760px){
+  .cover{
+    width: 90%;
+    height: auto;
+  }
+  #projectname{
+    padding-top: 12vh;
+  }
+  .right-col{
+    margin-right: 0;
+    margin-left: 5%;
+  }
+  .left-col{
+    margin-left: 0;
+  }
 }
 @media (min-width: 1200px){
-	.intro{
-		width: 60%;
-	}
+  .intro{
+    width: 60%;
+  }
+  .left-col{
+    margin-right: 2%;
+  }
 }
 @media (min-width: 2560px){
   #title{
@@ -145,5 +160,23 @@ h1, h2{
     margin-left: 10%;
     margin-top: 40vh;
     padding-bottom: 25vh;
+  }
+  #projectname{
+    font-size: 2.8em;
+  }
+  .left-col, .right-col{
+    font-size: 1.1em;
+  }
+}
+@media (min-width: 3840px){
+  .cover{
+    width: 35%;
+    height: auto;
+  }
+  #projectname{
+    font-size: 4em;
+  }
+  .left-col, .right-col{
+    font-size: 1.6em;
   }
 }
