--- a/css/github.css
+++ b/css/github.css
@@ -12,12 +12,12 @@ h3{
   padding-top: 7vh;
 }
 .card{
-  border-style: solid;
-  border-width: 1px;
-  border-color: #BBBBBB;
   width: 44%;
   color: black;
   text-decoration: none;
+}
+.card:hover{
+  box-shadow: 0 0 0 1px #BBBBBB;
 }
 .container{
   margin-left: 2vh;
